--- a/portfolio.css
+++ b/portfolio.css
@@ -7,7 +7,7 @@
 }
 
 body {
-    background-color: #13be85;
+    background-color: #f4f4f4;
     color: #333;
     text-align: center;
 }
@@ -42,7 +42,7 @@ body {
     align-items: center;
     justify-content: space-around;
     padding: 50px;
-    background: linear-gradient(to right, #dbd804, #42de8b);
+    background: linear-gradient(to right, #3fe764, #57d2ee);
     color: white;
 }
 
@@ -92,7 +92,7 @@ table {
     width: 80%;
     margin: 20px auto;
     border-collapse: collapse;
-    background: rgb(255, 255, 255);
+    background: white;
 }
 
 th, td {
@@ -101,7 +101,7 @@ th, td {
 }
 
 th {
-    background: #6803cd;
+    background: #d302b0;
     color: white;
 }
 
@@ -151,7 +151,7 @@ th {
 }
 
 .live {
-    background: #bc1408;
+    background: #2193b072;
     color: white;
 }
 
@@ -181,7 +181,7 @@ button {
 }
 
 button:hover {
-    background: #1a7a99;
+    background: #350d80;
 }
 
 /* Footer */
